crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/constants/dependency_depth_exceeded/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 6

Error: Variable definition exhausting cyclic dependency validator.
     ╭─[input.sol:259:1]
     │
 259 │ uint256 constant C255 = C256 + 1;
     │ ────────────────┬────────────────  
     │                 ╰────────────────── Error occurred here.
─────╯

Error: Variable definition exhausting cyclic dependency validator.
     ╭─[input.sol:260:1]
     │
 260 │ uint256 constant C256 = C257 + 1;
     │ ────────────────┬────────────────  
     │                 ╰────────────────── Error occurred here.
─────╯

Error: Variable definition exhausting cyclic dependency validator.
     ╭─[input.sol:261:1]
     │
 261 │ uint256 constant C257 = C258 + 1;
     │ ────────────────┬────────────────  
     │                 ╰────────────────── Error occurred here.
─────╯

Error: Variable definition exhausting cyclic dependency validator.
     ╭─[input.sol:262:1]
     │
 262 │ uint256 constant C258 = C259 + 1;
     │ ────────────────┬────────────────  
     │                 ╰────────────────── Error occurred here.
─────╯

Error: Variable definition exhausting cyclic dependency validator.
     ╭─[input.sol:263:1]
     │
 263 │ uint256 constant C259 = C260 + 1;
     │ ────────────────┬────────────────  
     │                 ╰────────────────── Error occurred here.
─────╯

Error: Variable definition exhausting cyclic dependency validator.
     ╭─[input.sol:264:1]
     │
 264 │ uint256 constant C260 = 1;
     │ ─────────────┬────────────  
     │              ╰────────────── Error occurred here.
─────╯
